# procscope

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  run.ps1  run.sh
.github/workflows/: ci.yml
demo/: Dockerfile.rec  record-demo.sh  record_tui.py
docs/superpowers/plans/: 2026-06-21-procscope.md
docs/superpowers/specs/: 2026-06-21-procscope-design.md
procscope/: Cargo.toml
procscope-common/: Cargo.toml
procscope-common/src/: lib.rs
procscope-ebpf/: Cargo.toml
procscope-ebpf/src/: main.rs
procscope/src/: capture.rs  format.rs  lib.rs  main.rs  model.rs  ui.rs
procscope/tests/: aggregation.rs  cli.rs
