[package]
name = "procscope"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "procscope"
path = "src/lib.rs"

[[bin]]
name = "procscope"
path = "src/main.rs"

[dependencies]
procscope-common = { path = "../procscope-common", features = ["user"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
aya = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
bytemuck = "1"
